manifest/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: notes-pod-name
  namespace: notes-ns-2
  labels:
    my: notes-pod-label
    type: main
spec:
  containers:
  - image: asim3/notes:0.60.6
    name: notes-container-name
