manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-service-name
  namespace: notes-ns-2
  labels:
    my: notes-service-label
spec:
  type: ClusterIP
  selector:
    my: notes-pod-label
    type: main
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
