manifest/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: notes-ns

---
apiVersion: v1
kind: Pod
metadata:
  name: whoami-test
  namespace: notes-ns
  labels:
    my: test-ingress
    type: main
spec:
  containers:
  - image: containous/whoami
    name: whoami-test

---

apiVersion: v1
kind: Service
metadata:
  name: whoami-test
  namespace: notes-ns
  labels:
    my: test-ingress
spec:
  type: ClusterIP
  selector:
    my: test-ingress
    type: main
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: notes-ns
  # name: must be a valid DNS subdomain name
  name: whoami-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.test.asimt.sa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-test
            port: 
              number: 80
