manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: notes-ns-2
  # name: must be a valid DNS subdomain name
  name: whoami-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.test.asimt.sa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-test
            port: 
              number: 80
